src/test/deca/codegen/valid/homemade/complex_op.deca
// Description:
//    Test de génération d'une erreur si overflow d'une opération arithmétique sur des Integers
//
// Resultats:
//
//
// Historique:
//    cree le 17/01/2020


{
      println(5+21 * 2 / 7 + 1 + (1 + (1 + (1 + (1 + (1 + (1)))))) * 1);
}
