src/test/deca/codegen/invalid/homemade/floatAddOverflow.deca
// Description:
//    Test de génération d'une erreur si overflow d'une opération arithmétique sur des Floats
//
// Resultats:
//
//
// Historique:
//    cree le 17/01/2020


{
      println(1.2676506e30 *1.2676506e30);
}
